src/test/deca/context/invalid/created/int_method_but_wrong_type_return/int_method_return_null.deca
// Description:
//		Methode int qui renvoit null
// Resultats:
//		Ligne 8 : Types don't match! 

class A{
	int value() {
		return(null);
	}
}
